<resources>
    <string name="app_name" translatable="false">FizKey</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="menuGlowne">Menu</string>
    <string name="menuKinematyka">Kinematics</string>
    <string name="rzuty">Projections</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="wzory">Patterns</string>
    <string name="wykresy">Plot</string>
    <string name="symuluj">Simulate</string>
    <string name="wyslij">Send Score</string>
    <string name="przyspieszenie" translatable="false">a = 9.81</string>
    <string name="predkoscPoczatkowa" translatable="false">v0 = 0</string>
    <string name="wysokosc" translatable="false">h</string>
    <string name="obliczenia">Calculate</string>
    <string name="wynik">Wynik</string>
    <string name="opor">Opór</string>
    <string name="sprezystosc">Odbicie</string>
    <string name="tittle">Score</string>
    <string name="gra">G</string>
    <string name="changePhenomeno">Change</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_formulas">Physics formulas</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="quizy">Quizzes</string>

    <string name="falldown_one">The starting height is 0 0, under acceleration 0 0
        and an initial speed equal to 0 m/s.
        How many time the object will reach the ground?</string>
    <string name="falldown_two">The starting height is 0 0, under acceleration 0 0
        and an initial speed equal to 0 m/s.
        What is its final speed?</string>
    <string name="falldown_three">The starting height is 0 0, under acceleration 0 0
        and an initial speed equal to 0 m/s.
        What is its speed in the 0 0 fall?</string>
    <string name="falldown_four">The starting height is 0 0, under acceleration 0 0
        and an initial speed equal to 0 m/s.
        What is its height in the 0 0 fall?</string>


    <string name="throwup_one">The starting speed is 0 0, under acceleration 0 0
        and an initial height equal to 0 0.
         How many 0 the object will reach the ground?</string>
    <string name="throwup_two">The starting speed is 0 0, under acceleration 0 0
        and an initial height equal to 0 0.
        What is its final speed?</string>
    <string name="throwup_three">The starting speed is 0 0, under acceleration 0 0
        and an initial height equal to 0 0.
        What is its speed in the 0 0 throw?</string>
    <string name="throwup_four">The starting speed is 0 0, under acceleration 0 0
        and an initial height equal to 0 0.
        What is its height in the 0 0 throw?</string>
    <string name="throwup_five">The starting speed is 0 0, under acceleration 0 0
        and an initial height equal to 0 0.
        How many 0 the object will be rising?</string>
    <string name="throwup_six">The starting speed is 0 0, under acceleration 0 0
        and an initial height equal to 0 0.
        What is the maximum height?</string>


    <string name="oblique_projection_one">The starting velocity is 0 0, under gravity equals 0 0
        , with angle 0 ° and an initial height equal to 0 0.
         How much time until the body fly?</string>
    <string name="oblique_projection_two">The starting velocity is 0 0, under gravity equals 0 0
        , with angle 0 ° and an initial height equal to 0 0.
         What is the maximum height?</string>
    <string name="oblique_projection_three">The starting velocity is 0 0, under gravity equals 0 0
        , with angle 0 ° and an initial height equal to 0 0.
         What is the maximum range?</string>
    <string name="oblique_projection_four">The starting velocity is 0 0, under gravity equals 0 0
        , with angle 0 ° and an initial height equal to 0 0.
         How much time the object will be rising</string>
    <string name="oblique_projection_five">The starting velocity is 0 0, under gravity equals 0 0
        , with angle 0 ° and an initial height equal to 0 0.
         What is its vY in the 0 0 throw?</string>
    <string name="oblique_projection_six">The starting velocity is 0 0, under gravity equals 0 0
        , with angle 0 ° and an initial height equal to 0 0.
        What is its y in the 0 0 throw?</string>
    <string name="oblique_projection_seven">The starting velocity is 0 0, under gravity equals 0 0
        , with angle 0 ° and an initial height equal to 0 0.
        What is its angle in the 0 0 throw?</string>


    <string name="horizontal_projection_one">The starting velocity X is 0 0, under gravity equals 0 0
         and an initial height equal to 0 0.
         How much time until the body fly?</string>
    <string name="horizontal_projection_two">The starting velocity X is 0 0, under gravity equals 0 0
         and an initial height equal to 0 0.
         What is the maximum range?</string>
    <string name="horizontal_projection_three">The starting velocity X is 0 0, under gravity equals 0 0
         and an initial height equal to 0 0.
         What is its vY in the 0 0 throw?</string>
    <string name="horizontal_projection_four">The starting velocity X is 0 0, under gravity equals 0 0
         and an initial height equal to 0 0.
        What is its y in the 0 0 throw?</string>
    <string name="horizontal_projection_five">The starting velocity X is 0 0, under gravity equals 0 0
         and an initial height equal to 0 0.
        What is its angle in the 0 0 throw?</string>

    <string name="quiz_menu_welcome">Welcome to quizzes part \nCustom your quiz</string>
    <string name="select_quiz_range">Select a quiz range</string>
    <string name="begin_quizzes">Start quiz</string>
    <string name="title_select_phenomenon">Check the phenomena to be included</string>
    <string name="quiz_menu_quanity_block">Number of response fields</string>
    <string name="quiz_menu_quanity_question">Number of rounds</string>


    <string name="save">The changes have been saved</string>
    <string name="not_save">The changes have not been saved</string>
    <string name="select_phenomena">Select phenomena</string>

    <!-- CardViewResultQuestion   -->

    <string name="card_view_good_answer">Good answer : </string>
    <string name="card_view_your_answer">Your answer : </string>
    <string name="card_view_number_question">Question number  </string>
    <string name="card_view_question">Question :  </string>
    <string name="dialog_quiz_result_welcome">Your results</string>
    <string name="quiz_menu_level">Difficulty level</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="quiz_menu_timer">Timer</string>

    <!-- RegisterFragment and LoginFragment -->
    <string name="sign_up_register">Sign up</string>
    <string name="sign_in_login">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="value_of_login">You need to provide data to create an account</string>


    <!-- FirstLoginDialogFragment -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="title_name_first_login_dialog_fragment">Your profile</string>


    <string name="quiz_menu">Quiz Menu</string>
    <string name="forgot_password_login">Forgot password?</string>
    <string name="create_custom_quiz_fragment">Create custom quiz</string>
    <string name="solve_custom_quiz_fragment">Solve custom quizzes</string>
    <string name="welcome_create_custom_quiz">Create custom quiz</string>
    <string name="empty_field">This field cannot be empty</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="title_activity_custom_result" translatable="false">CustomResultActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="answer">Answer</string>
    <string name="back">Back</string>
    <string name="random_questions_and_answers">Rand question and answers</string>
    <string name="values_the_same">Values cannot be the same</string>
    <string name="logout">Logout</string>
    <string name="login">Logged In</string>
    <string name="try_again">Try Again</string>
    <string name="logged_out">Logged out</string>
    <string name="sign_out">Sign out</string>
    <string name="create_group">Create a new group</string>
    <string name="join_the_group">Join the group</string>
    <string name="group">Groups</string>
    <string name="my_group">My groups</string>
    <string name="groups">Groups</string>
    <string name="code_group_fragment">Enter the code here</string>
    <string name="title_activity_group" translatable="false">GroupActivity</string>
    <string name="bad_enter_code">The code is invalid</string>
    <string name="already_exist_in_group">You are already in this group</string>
    <string name="joined_the_grouo">You joined the group</string>
    <string name="created_group">The group has been created</string>
    <string name="number_of_group_members">Number of group members</string>
    <string name="ask_a_task">Ask a task</string>
    <string name="task_to_be_solved">Task to be solved</string>
    <string name="correct_the_grade">Correct the grade</string>
    <string name="my_grades">Grades</string>
    <string name="group_profile">Home</string>
    <string name="welcome">Welcome</string>
    <string name="leave_group">Leave group</string>
    <string name="members">Members</string>
    <string name="send_an_invitation_to_the_group">"Send an invitation to the group "</string>
    <string name="for_all">For everyone</string>
    <string name="mass">Mass</string>
    <string name="angle">Angle</string>
    <string name="resistance">Resistance</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="free_fall">Free Fall</string>
    <string name="vertical_projection">Vertical Projection</string>
    <string name="oblique_projection">Oblique Projection</string>
    <string name="horizontal_projection">Horizontal Projection</string>
    <string name="connected">You are connected to the internet, all functions are available</string>
    <string name="not_connected">You are not connected to the internet, not all functions are available</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="invitation_to_group">Invitation to a group called \"</string>
    <string name="invitation_to_group_message">"invites you to join the group, the join code - "</string>


</resources>