<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/group_profile"
        android:title="@string/group_profile"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/ask_a_task"
        android:title="@string/ask_a_task"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>


    <item
        android:id="@+id/task_to_be_solved"
        android:title="@string/task_to_be_solved"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/my_grades"
        android:title="@string/my_grades"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/correct_the_grade"
        android:title="@string/correct_the_grade"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/send_an_invitation_to_the_group"
        android:title="@string/send_an_invitation_to_the_group"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/leave_group"
        android:title="@string/leave_group"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

</menu>