<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_quiz"
        android:title="@string/quiz_menu"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/register"
        android:title="@string/sign_up_register"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/login"
        android:title="@string/sign_in_login"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/logout"
        android:title="@string/sign_out"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/create_custom_quiz_fragment"
        android:title="@string/create_custom_quiz_fragment"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>

    <item
        android:id="@+id/solve_custom_quiz_fragment"
        android:title="@string/solve_custom_quiz_fragment"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        ></item>
</menu>