<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    tools:context=".quizzes.firebase.view.login.ResetPasswordDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_name_first_login_dialog_fragment"
        android:layout_marginLeft="2dp"
        android:textSize="18sp"
        android:textColor="#000"
        android:id="@+id/welcome_text_reset_password_dialog_fragment"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text_reset_password_dialog_fragment"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:hint="@string/email"
        android:id="@+id/email_reset_password_dialog_fragment"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/email_reset_password_dialog_fragment"
        android:layout_alignParentRight="true"
        android:layout_marginRight="2dp"
        android:textColor="#000"
        android:textSize="18dp"
        android:id="@+id/ok_reset_password_dialog_fragment"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/email_reset_password_dialog_fragment"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="2dp"
        android:textSize="18dp"
        android:textColor="#000"
        android:id="@+id/cancel_reset_password_dialog_fragment"/>

</RelativeLayout>