<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.kinematics.projection.horizontal.HorizonatalProjectionActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="113dp"></include>

    <Button
        android:id="@+id/plot_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClickPlot"
        android:text="@string/wykresy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/simulation_horizontal_projection_activity" />

    <Button
        android:id="@+id/simulation_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClickSimulation"
        android:text="@string/symuluj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/send_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClickSend"
        android:text="@string/wyslij"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plot_horizontal_projection_activity" />

    <EditText
        android:id="@+id/height_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:ems="4"
        android:hint="@string/wysokosc"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/start_velocity_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="4"
        android:hint="@string/predkoscPoczatkowa"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_horizontal_projection_activity" />

    <EditText
        android:id="@+id/acceleration_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="4"
        android:hint="@string/przyspieszenie"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_velocity_horizontal_projection_activity" />

    <EditText
        android:id="@+id/mass_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="4"
        android:hint="@string/mass"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acceleration_horizontal_projection_activity" />

    <EditText
        android:id="@+id/resistance_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="4"
        android:inputType="textPersonName"
        android:hint="@string/resistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mass_horizontal_projection_activity" />

    <TextView
        android:id="@+id/score_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/wynik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/acceleration_horizontal_projection_activity"
        app:layout_constraintTop_toBottomOf="@+id/calculation_horizontal_projection_activity" />

    <Button
        android:id="@+id/calculation_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:onClick="onClickCalculate"
        android:text="@string/obliczenia"
        app:layout_constraintStart_toEndOf="@+id/height_horizontal_projection_activity"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="281dp" />

    <Spinner
        android:id="@+id/score_per_secound_horizontal_projection_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resistance_horizontal_projection_activity" />


</androidx.constraintlayout.widget.ConstraintLayout>